sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: illegal start of simple pattern
  var  Double ecart = getNombreValeurs()
                    ^AlgCombSort:4: error: '=' expected but ';' found.
  var b=0
^